--- a/WiMaP/templates/base.html
+++ b/WiMaP/templates/base.html
@@ -1,8 +1,9 @@
 
 <header>
     
-    <button style="height: 50px;width: 100px; font-size: large; background-color: darkgray; ;">Sign In</button>
-    <button style="height: 50px;width: 100px; font-size: large; background-color: #fffb00">Sign Up</button>
+    <button style="height: 50px;width: 100px; font-size: large; background-color: darkgray; border-radius: 15px;">Sign In</button>
+    <a href="{% url 'signup' %}" style="padding: 20px; height: 50px;width: 100px; font-size: large; background-color: #fffb00; border-radius: 15px;">Sign Up</a>
+  
 </header>
 
 {% block content %}
